pytest marker fix

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,5 +5,5 @@ markers =
     api: self-explanatory
     integration: self-explanatory
     buggywebservice: API tests for buggywebservice
-    waut-service: API tests for application webautomation-tutorial
-    authors-service: API tests for authors webservice
+    waut_service: API tests for application webautomation-tutorial
+    authors_service: API tests for authors webservice
